--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "shiroamada/gosms",
-    "description": "GoSMS Notifications channel for Laravel 5.3.",
+    "description": "GoSMS Notifications channel for Laravel 5.3 and Above",
     "keywords": ["laravel", "notifications", "gosms"],
     "homepage": "https://github.com/shiroamada/gosms",
     "license": "MIT",
@@ -13,12 +13,12 @@
         }
     ],
     "require": {
-        "php": ">=5.6.4",
+        "php": "^7.1",
         "ext-mbstring": "*",
         "guzzlehttp/guzzle": "^6.2",
-        "illuminate/queue": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
-        "illuminate/notifications": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*",
-        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*"
+        "illuminate/queue": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*|^6.0",
+        "illuminate/notifications": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*|^6.0",
+        "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*|^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.2",
