--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     ],
     "require": {
         "php": ">=7.2",
+        "ext-json": "*",
         "ext-mbstring": "*",
         "guzzlehttp/guzzle": "^7.0.1",
         "illuminate/queue": "5.1 - 5.8|^6.0|^7.0|^8.0",
@@ -21,7 +22,7 @@
         "illuminate/support": "5.1 - 5.8|^6.0|^7.0|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
+        "phpunit/phpunit": "^9.0",
         "mockery/mockery": "^1.3.1"
     },
     "autoload": {
