--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         laravel-version: ['5.3.*','5.4.*','5.5.*','5.6.*','5.7.*','5.8.*', '^6.0', '^7.0', '^8.0']
-        php-version: ['7.2', '7.3']
+        php-version: ['7.3', '7.4', '8.0']
         exclude:
           - laravel-version: '5.8.*'
             php-version: '8.0'
@@ -24,8 +24,6 @@ jobs:
             php-version: '8.1'
           - laravel-version: '^7.0'
             php-version: '8.1'
-          - laravel-version: '^8.0'
-            php-version: '7.2'
     name: PHP ${{ matrix.php-version }} on Laravel ${{ matrix.laravel-version }}
     steps:
       - name: Checkout
