--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "shiroamada/gosms",
-    "description": "GoSMS Notifications channel for Laravel 5.3 and Above",
+    "description": "GoSMS Notifications channel for Laravel 5.3 - 11",
     "keywords": ["laravel", "notifications", "gosms"],
     "homepage": "https://github.com/shiroamada/gosms",
     "license": "MIT",
@@ -17,9 +17,9 @@
         "ext-json": "*",
         "ext-mbstring": "*",
         "guzzlehttp/guzzle": "^7.0.1",
-        "illuminate/queue": "5.1 - 5.8|^6.0|^7.0|^8.0",
-        "illuminate/notifications": "5.1 - 5.8|^6.0|^7.0|^8.0",
-        "illuminate/support": "5.1 - 5.8|^6.0|^7.0|^8.0"
+        "illuminate/queue": "5.1 - 5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/notifications": "5.1 - 5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/support": "5.1 - 5.8|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
